style: :art: fix bell(it was too big) & nav fixed

--- a/style.css
+++ b/style.css
@@ -56,12 +56,16 @@
   margin-top: 0.2rem auto;
   align-items: center;
   justify-content: space-around;
-  min-width: 100vw;
+   top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
   height: 80px;
-  /* background-color: var(--background_bais); */
+ position: fixed;
+  background-color: var(--background_white);
+  z-index: 5;
 }
 
 #navbar-pinterest {
+  width: 100%;
   display: flex;
   align-items: center;
   /* min-width: 1189px; */
@@ -188,7 +192,7 @@
 }
 
 .notifications {
-  width: 7rem;
+  width: 6rem;
 }
 
 .main_container {
@@ -199,6 +203,7 @@
   columns: 240px;
 
   padding: 1rem 0;
+  margin-top: 6rem;
 }
 
 .app_flex {
